# speedmeter

./: .gitignore  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py  uninstall.sh
.github/workflows/: ci.yml
speedmeter/: __init__.py  __main__.py  app.py  config.py  history.py  tester.py  widget.spec  widget_gui.py  widgets.py
tests/: __init__.py  test_speedmeter.py
