[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "speedmeter"
version = "1.0.0"
description = "Terminal-based interactive internet speed meter with real-time UI"
readme = "README.md"
authors = [
    {name = "SpeedMeter Team", email = "dev@speedmeter.io"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["speedtest", "internet", "terminal", "tui", "network", "bandwidth"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "speedtest-cli>=2.1.3",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "prompt_toolkit>=3.0.43",
    "psutil>=5.9.8",
    "colorama>=0.4.6",
    "platformdirs>=4.2.0",
    "requests>=2.31.0",
]
optional-dependencies = {
    "dev" = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
}

[project.scripts]
speedmeter = "speedmeter.__main__:main"

[tool.setuptools.packages.find]
include = ["speedmeter*"]