[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedmeter"
version = "1.1.0"
description = "Cyberpunk terminal-based internet speed meter with real-time monitoring"
readme = "README.md"
authors = [
    {name = "SpeedMeter Team", email = "dev@speedmeter.io"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["speedtest", "internet", "terminal", "tui", "network", "bandwidth"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "speedtest-cli>=2.1.3",
    "rich>=13.7.0",
    "textual>=0.52.0",
    "psutil>=5.9.8",
    "platformdirs>=4.2.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
speedmeter = "speedmeter.__main__:main"

[tool.setuptools.packages.find]
include = ["speedmeter*"]